k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spacepulse-service
  labels:
    app: spacepulse
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: spacepulse
