k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spacepulse-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
  - host: app.spacepulse.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: spacepulse-service
            port:
              number: 80
